# quickag

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
src/logging/: __init__.py  logger.py
src/quickAg/: singleton.py
src/quickAg/logging/: __init__.py  _logging.py  logging.py
src/quickAg/math/: __init__.py  primes.py
src/quickAg/singleton/: __init__.py  singleton.py
src/quickAg/streams/: __init__.py  _elm.py  _streams.py  _streams.pyi  elm.py  streams.py
src/quickAg/structs/: __init__.py  bags.py  exceptions.py  trees.py
src/quickAg/threading/: __init__.py  _threading.py  threading.py
src/threading/: __init__,py  __init__.py  threading.py
tests/: test_math.py  test_streams.py
