[metadata]
name = quickAg
version = attr: str.__version__
author = ramsteak
author_email = ramsteak.git@gmail.com
url = "https://github.com/ramsteak/quickag"
description = A variety of useful submodules
long_description = file: README.md, LICENSE
keywords = quickAg
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
python_requires = >=3.10
packages=find:
package_dir=
    = src

[options.packages.find]
where=src